Fixing text cropping

--- a/less/pages/buyers-guide/item.less
+++ b/less/pages/buyers-guide/item.less
@@ -118,7 +118,7 @@
       opacity: 0.5;
       font-size: 24px;
       float: left;
-      line-height: 23px;
+      line-height: 33px;
     }
     h1 {
       margin: 0;
